# GenAI

./: .env  Cargo.toml  README.md
skills/auto-commit-msg/: SKILL.md
src/: lib.rs  main.rs
src/llm/: client.rs  config.rs  gemini.rs  mock.rs  mod.rs  prompt.rs
src/skill/: mod.rs  model.rs  parser.rs  scanner.rs  selector.rs  validator.rs
src/util/: errors.rs  fs.rs  mod.rs  templating.rs
src/workflow/: condition.rs  context.rs  executor.rs  mod.rs  step.rs
